# Naive-Aircraft-Game

./: .gitignore  CMakeLists.txt  README.md  main.cpp
components/: Aircraft.cpp  Aircraft.h  SkyBox.cpp  SkyBox.h
components/AABB/: AABB.cpp  AABB.h
components/Aircraft/: Aircraft.cpp  Aircraft.h
components/Floor/: Floor.cpp  Floor.h
components/SkyBox/: SkyBox.cpp  SkyBox.h
components/Terrain/: Terrain.cpp  Terrain.h
libs/: PerlinNoise.cpp  PerlinNoise.h  myGL.cpp  myGL.h  myGLHeaders.h
shader/: cube.vert.glsl  jet.body.frag  jet.body.vert  jet.frag.glsl  jet.shadow.frag  jet.shadow.vert  jet.vert.glsl
shader/cube/: frag.glsl
shader/floor/: frag.glsl  tc.glsl  te.glsl  vert.glsl
shader/jet/: body.frag  body.vert
shader/terrain/: frag.glsl  vert.glsl
source/: 787.mtl  airbus.mtl  boeing.mtl  myplane.mtl
